# python-projects

./: README.md
project/: .env.example  .gitignore  Dockerfile  Makefile  README.dev.md  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.sh
project/apps/cart/: admin.py  apps.py  context_processors.py  models.py  serializers.py  signals.py  urls.py  views.py
project/apps/coupons/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
project/apps/orders/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  urls_frontend.py  views.py
project/apps/payments/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
project/apps/products/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  urls_frontend.py  views.py
project/apps/users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  urls_frontend.py  views.py
project/config/: asgi.py  urls.py  wsgi.py
project/config/settings/: base.py  development.py  production.py
project/coupons/: urls.py  views.py
project/static/css/: style.css
project/static/js/: checkout.js  main.js
project/templates/: base.html
project/templates/cart/: cart_detail.html
project/templates/coupons/: my_coupons.html
project/templates/home/: index.html
project/templates/orders/: checkout.html  checkout.js  order_detail.html  order_list.html
project/templates/payments/: payment.html
project/templates/products/: category_detail.html  category_list.html  product_detail.html  product_list.html  search.html
project/tests/: test_products.py  test_users.py
python1/: agents.md
(+8 files in other folders)
